roles/install-app/files/ams/0ams-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ams
