roles/install-app/files/ams/ams-api-dc1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-api-dc1
  namespace: ams
  labels:
    zone: dc1
    app: ams-api
spec:
  replicas: 1
  template:
    metadata:
      name: ams-api
      labels:
        app: ams-api
        zone: dc1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ams-api
      nodeSelector:
        zone: dc1
      containers:
        - name: ams-api
          image: 192.168.160.47:8888/ams/amsapi:v0
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8100
              path: /metrics
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8100
              path: /metrics
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8100
              path: /metrics
          resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: '0.5'
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command: [ "sleep" ,"40" ]
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
  selector:
    matchLabels:
      zone: dc1
      app: ams-api
