roles/install-app/files/ams/ams-data-dc2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-data-dc2
  namespace: ams
  labels:
    zone: dc2
    app: ams-data
spec:
  replicas: 1
  template:
    metadata:
      name: ams-data-dc2
      labels:
        zone: dc2
        app: ams-data
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ams-data
      nodeSelector:
        zone: dc2
      containers:
        - name: ams-data
          image: 192.168.160.47:8888/ams/amsdata:v0
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8105
              path: /amsdata/
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8105
              path: /amsdata/
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 8105
              path: /amsdata/
          resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: '0.2'
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command: [ "sleep" ,"40" ]
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
  selector:
    matchLabels:
      zone: dc2
      app: ams-data
