roles/install-app/files/ams/ams-ui-dc2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-ui-dc2
  namespace: ams
  labels:
    zone: dc2
    app: ams-ui
spec:
  replicas: 1
  template:
    metadata:
      name: ams-ui-dc2
      labels:
        zone: dc2
        app: ams-ui
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ams-ui
      nodeSelector:
        zone: dc2
      containers:
        - name: ams-ui
          image: 192.168.160.47:8888/ams/amshtml:v1
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 80
              path: /
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              port: 80
              path: /
          resources:
            limits:
              cpu: '1'
              memory: 300Mi
            requests:
              cpu: '0.2'
              memory: 50Mi
          lifecycle:
            preStop:
              exec:
                command: [ "sleep" ,"15" ]
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      imagePullSecrets:
        - name: harbor
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
  selector:
    matchLabels:
      app: ams-ui
      zone: dc2
