roles/install-app/files/ams/ams-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ams-api
  namespace: ams
spec:
  selector:
    app: ams-api
  ports:
    - port: 8100
      nodePort: 30377
  type: NodePort
