roles/install-app/files/ams/ams-data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ams-data
  namespace: ams
  annotations:
    prometheus.io/http-probe: "true"
    prometheus.io/http-probe-port: "8105"
    prometheus.io/http-probe-path: "/ams/health/get"
    prometheus.io/scrape: "true"
    prometheus.io/port: '8105'
    prometheus.io/scheme: "http"
    prometheus.io/path: '/metrics'
spec:
  selector:
    app: ams-data
  ports:
    - port: 8105
      nodePort: 31220
  type: NodePort
