roles/install-app/files/ams/ams-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-ui
  namespace: ams
  labels:
    app: ams-ui
spec:
  replicas: 1
  template:
    metadata:
      name: ams-ui
      labels:
        app: ams-ui
    spec:
      containers:
        - name: ams-ui
          image: 192.168.160.47:8888/ams/amshtml:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: ams-ui
---
apiVersion: v1
kind: Service
metadata:
  name: ams-ui
  namespace: ams
spec:
  selector:
    app: ams-ui
  ports:
    - port: 80
      nodePort: 32630
  type: NodePort
