roles/install-app/files/ams/ams-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ams-ui
  namespace: ams
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`ams.cicem.fa`)
      services:
        - name: ams-ui
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ams-api-replacepath
spec:
  replacePath:
    path: /
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ams-ui
  namespace: ams
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`ams.cicem.fa`) && PathPrefix(`/apis/`)
      middlewares:
        - name: ams-api-replacepath
      services:
        - name: ams-api
          port: 8100
